[package]
name = "yass"
version = "0.1.0"
edition = "2021"
authors = ["Cameron Dutro <camertron@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.8.2" }
stylo = { version = "0.12.0" }
selectors = { version = "0.35.0" }
url = { version = "2.5" }
