[package]
name = "yass"
version = "0.1.0"
edition = "2021"
authors = ["Cameron Dutro <camertron@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.8.2" }
stylo = { version = "0.13.0" }
stylo_traits = { version = "0.13.0" }
selectors = { version = "0.36.1" }
url = { version = "2.5" }

[profile.release]
lto = true         # Enable Link-Time Optimization
opt-level = 3      # Maximum optimization level
codegen-units = 1  # Slower to compile, but produces a smaller/faster binary
