[package]
name = "yass"
version = "0.2.0"
edition = "2021"
authors = ["Cameron Dutro <camertron@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cssparser = { version = "0.36.0" }
magnus = { version = "0.8.2" }
stylo = { version = "0.16.0" }
stylo_traits = { version = "0.16.0" }
selectors = { version = "0.37.0" }
url = { version = "2.5" }
stylo_static_prefs = "0.16.0"

[profile.release]
lto = true         # Enable Link-Time Optimization
opt-level = 3      # Maximum optimization level
codegen-units = 1  # Slower to compile, but produces a smaller/faster binary
